# pl-mocks-and-fakes

./: README.md  pyproject.toml
src/pl_mocks_and_fakes/: __init__.py  default_mock_return_value.py  default_value.py  fakes.py  mocks.py
tests/: conftest.py  default_mock_return_value_test.py  default_value_test.py  fakes_test.py  mocks_test.py
tests/test_files/: api.py  api_fake.py  fakes_test_module.py  mocks_test_module.py  module_to_mock.py
tests/test_files/nested_test_files_1/: function_that_calls_function_to_mock.py
tests/test_files/nested_test_files_1/nested_test_files_2/: deeply_nested_function_to_mock.py
