[project]
name = "pl-mocks-and-fakes"
version = "0.0.28"
description = "Mock slow, nondeterministic, and side-effect-producing code with minimal per-test configuration."
readme = "README.md"
authors = [{ name = "Peter Lavigne" }]
requires-python = ">=3.12"
dependencies = ["pydantic"]
license = "Apache-2.0"
license-files = ["LICENSE"]
classifiers = ["License :: OSI Approved :: Apache Software License"]

[project.urls]
Homepage = "https://github.com/Peter-Lavigne/pl-mocks-and-fakes"
Repository = "https://github.com/Peter-Lavigne/pl-mocks-and-fakes"

[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pl-ci-cd==0.0.19",
]

[tool.ruff]
extend = "copied/pyproject.toml"

[tool.pyright]
typeCheckingMode = "strict"

[tool.coverage.run]
omit = [
    "tests/*",
]
